--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,31 @@
-<h1>
-    Hello World
-</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>ML API</title>
+    
+</head>
+<body>
+    <div class="login">
+        <h1>Boston House Price Prediction</h1>
+
+        <! -- Main Input for receiving query to our ML -->
+        <form action="{{url_for('predict')}}" method="post">
+            <input type="text" name="MedInc" placeholder="MedInc" required="required" /><br>
+            <input type="text" name="HouseAge" placeholder="HouseAge" required="required" /><br>
+            <input type="text" name="AveRooms" placeholder="AveRooms" required="required" /><br>
+            <input type="text" name="AveBedrms" placeholder="AveBedrms" required="required" /><br>
+            <input type="text" name="Population" placeholder="Population" required="required" /><br>
+            <input type="text" name="AveOccup" placeholder="AveOccup" required="required" /><br>
+            <input type="text" name="Latitude" placeholder="Latitude" required="required" /><br>
+            <input type="text" name="Longitude" placeholder="Longitude" required="required" /><br>
+
+
+            <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>  
+        </form>
+
+    </div>
+    {{prediction_text}}
+
+</body>
+</html> 
